# 3D-Engine

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Shaders/: first.frag  first.vert
Shaders/Preprocessing/: preprocess.frag
include/: Logger.hpp
include/App/: App.hpp  AppSettings.hpp  Debug.hpp  Services.hpp
include/Components/: Camera.hpp  DirectionalLight.hpp  Drawable.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp  Transform.hpp
include/Contexts/: CameraContext.hpp  EngineContext.hpp
include/Engine/: Events.hpp  Layer.hpp  Renderer.hpp  Scene.hpp
include/Engine/Events/: KeyInputEvent.hpp  MouseMoveEvent.hpp  TestEvent.hpp  WindowResizeEvent.hpp
include/Engine/Layers/: GameLayer.hpp  ImGUI_DebugLayer.hpp  PresentLayer.hpp
include/Engine/LowLevel/: EBO.hpp  FBO.hpp  Shader.hpp  Texture2D.hpp  VAO.hpp  VBO.hpp  Vertex.hpp
include/Engine/Systems/: AssetManager.hpp  CameraManager.hpp  HierarchySystem.hpp  InputSystem.hpp  LightManager.hpp  MaterialManager.hpp  SceneManager.hpp  ShaderManager.hpp  Texture2DManager.hpp
src/: CMakeLists.txt  Dependencies.cmake  Logger.cpp  glad.c  main.cpp
src/App/: App.cpp  App.hpp  CMakeLists.txt  Debug.cpp  Services.cpp
src/App/Layers/: GameLayer.cpp  GameLayer.hpp  ImGUI_DebugLayer.cpp  ImGUI_DebugLayer.hpp  Layer.cpp  Layer.hpp  PresentLayer.cpp  PresentLayer.hpp
src/App/Systems/: SceneManager.cpp  SceneManager.hpp
src/App/assets/Objects/Spiderman/: scene.gltf
src/App/assets/Shaders/: first.frag  first.vert  wireframe.frag
src/App/assets/Shaders/Preprocessing/: FXAA.frag  FXAA.vert  preprocess.vert
src/Components/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Transform.cpp
src/Core/: CMakeLists.txt
src/Core/Contexts/: EngineContext.hpp  SceneContext.hpp
src/Core/Engine/: Engine.cpp  Engine.hpp  EngineSettings.hpp
src/Core/Engine/Components/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Tags.hpp  Texture.hpp  Transform.cpp  Transform.hpp
src/Core/Engine/Components/Physics/: Collider.hpp  PhysicsBody.hpp  Rigidbody.hpp
src/Core/Engine/Events/: Events.hpp  KeyInputEvent.hpp  MouseMoveEvent.hpp  TestEvent.hpp  WindowResizeEvent.hpp
src/Core/Engine/Physics/: PhysicsWorld.cpp  PhysicsWorld.hpp
src/Core/Engine/Physics/Misc/: PhysicsBody.hpp
src/Core/Engine/Renderer/: Renderer.cpp  Renderer.hpp
src/Core/Engine/Renderer/API/: Debug.cpp  Debug.hpp  EBO.cpp  EBO.hpp  FBO.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp
src/Core/Engine/Renderer/API/OpenGL/: FBO.cpp  FBO.hpp  SSBO.cpp  SSBO.hpp  UBO.cpp  UBO.hpp  VAO.hpp
src/Core/Engine/Renderer/API/Screen/: Layer.cpp  Layer.hpp  Scene.cpp  Scene.hpp
src/Core/Engine/Systems/: AssetManager.cpp  AssetManager.hpp  CameraManager.cpp  CameraManager.hpp  HierarchySystem.cpp  HierarchySystem.hpp  InputSystem.cpp  InputSystem.hpp  LightManager.cpp  LightManager.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  Services.cpp  Services.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture2DManager.cpp  Texture2DManager.hpp
src/Engine/: Layer.cpp  Renderer.cpp  Scene.cpp
src/Engine/Layers/: GameLayer.cpp  ImGUI_DebugLayer.cpp  PresentLayer.cpp
src/Engine/LowLevel/: EBO.cpp  FBO.cpp  Shader.cpp  Texture2D.cpp  VAO.cpp  VBO.cpp
src/Engine/Systems/: AssetManager.cpp  CameraManager.cpp  HierarchySystem.cpp  InputSystem.cpp  LightManager.cpp  MaterialManager.cpp  SceneManager.cpp  ShaderManager.cpp  Texture2DManager.cpp
src/Shared/: CMakeLists.txt
src/Shared/API_Util/: GPUData.hpp
tests/: CMakeLists.txt  test_camera.cpp  test_light.cpp  test_light_manager.cpp  test_light_types.cpp  test_material.cpp  test_services.cpp  test_shader_parse.cpp  test_texture2d_manager.cpp  test_transform.cpp  test_vertex.cpp
