# google test
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)

# Assimp options
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
set(ASSIMP_INJECT_DEBUG_POSTFIX OFF CACHE BOOL "" FORCE)
set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE)

# Tracy
set(TRACY_ENABLE OFF CACHE BOOL "" FORCE)
set(TRACY_ON_DEMAND ON CACHE BOOL "" FORCE)
# set(TRACY_NO_CONTEXT_SWITCH ON CACHE BOOL "" FORCE)
# set(TRACY_NO_SAMPLING ON CACHE BOOL "" FORCE)
# set(TRACY_ONLY_LOCALHOST ON CACHE BOOL "" FORCE)


include(Dependencies.cmake)

add_subdirectory(Shared)
add_subdirectory(Core)
add_subdirectory(App)
